--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
         <div id="header">
 
             <div class="header-left">
-                <div class="logo">
-                    <a href="index.html"><img src="Assets/Picture/1Logo_all.png" alt="" width="50px"></a>
-                </div>
                 <div class="menu">
                     <ul>
                         <li class="to-kien"><a href="index.html">GIỚI THIỆU</a></li>
@@ -264,40 +261,38 @@
             </div>
 
             <div class="taivengay-last" id="hotro">
+                <img class="poscard" src="Assets/Picture/poscard.png" alt="">
                 <div id="contact">
-                    <h5>LIÊN HỆ VNG ĐỂ ĐƯỢC HỖ TRỢ BẠN NHÉ!</h5>
+                    <div class="display-flex h5-big" style="align-items: center;"><h5>LIÊN HỆ </h5> <img src="Assets/Picture/vnggameslogo.png" style="margin-bottom: 5px; margin-left: 10px; margin-right: 10px;" alt="" width="204px" height="25px"><h5> ĐỂ ĐƯỢC HỖ TRỢ!</h5></div>
                     <div class="contact-content">
                         <div class="left">
                             <div class="form">
                                 <p class="enter-information">Bạn tên là? (*)</p>
                                 <div class="image yccv">
-                                    <input type="text">
+                                    <input type="text" placeholder="Nguyen Van A...">
                                 </div>
                                 <p class="not-empty">Không được để trống (*)</p>
                                 <p class="enter-information">Phương thức liên lạc của bạn? (*)</p>
                                 <div class="image hvt">
-                                    <input type="text">
+                                    <input type="text" placeholder="nguoichoimoi@gmail.com/03 555 666 XX">
                                 </div>
                                 <p class="not-empty">Không được để trống (*)</p>
 
-                                <p class="enter-information">Phương thức liên lạc của bạn? (*)</p>
+                                <p class="enter-information">Vấn đề bạn cần hỗ trợ? (*)</p>
                                 <div class="image sdt">
-                                    <input type="text">
+                                    <input type="text" placeholder="Không cài đặt được game trên thiết bị ">
                                 </div>
                                 <p class="not-empty">Không được để trống (*)</p>
                             </div>
                         </div>
-                        <div class="right">
-                            <img class="char1" src="Assets/Picture/Char1.png" alt="" width="100%">
-                        </div>
                     </div>
-                    <div class="form">
+                    <div class="form form-mota">
                         <p class="enter-information">Mô tả chi tiết</p>
                         <div class="image decs">
-                            <textarea></textarea>
+                            <textarea placeholder="Không cài đặt được game trên thiết bị XiaoMi 3A, game hiện thông báo không tương thích với thiết bị"></textarea>
                         </div>
+                        <a href=""><div class="btn-send">Gửi</div></a>
                     </div>
-                    <a href=""><img class="btn-gui" src="Assets/Picture/btnGui.png" alt=""></a>
                 </div>
             </div>
         </div>
