--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <div class="header-left">
                 <div class="menu">
                     <ul>
-                        <li class="to-kien"><a href="index.html">GIỚI THIỆU</a></li>
-                        <li class="tt-sk"><a href="#gioithieu">TẢI VỀ</a></li>
+                        <li class="to-kien"><a href="#gioithieu">GIỚI THIỆU</a></li>
+                        <li class="tt-sk"><a href="#taivengay">TẢI VỀ</a></li>
                         <li class="kien-hh"><a href="#taivengay">HƯỚNG DẪN</a></li>
-                        <li class="kien-hh"><a href="#taivengay">TIN TỨC - SỰ KIỆN</a></li>
+                        <li class="kien-hh"><a href="#tt-sk-cd">TIN TỨC - SỰ KIỆN</a></li>
                         <li class="kien-flex">
-                            <a href="#congdong">CỘNG ĐỒNG</a>
+                            <a href="#tt-sk-cd">CỘNG ĐỒNG</a>
                             <ul class="sub-menu">
-                                <li><a href="#congdong" style="color: #337FFF;">Facebook</a></li>
-                                <li><a href="#congdong" style="color: #863CD2;">Instagram</a></li>
-                                <li><a href="#congdong" style="color: #FF0000;">Youtube</a></li>
+                                <li><a href="#tt-sk-cd" style="color: #337FFF;">Facebook</a></li>
+                                <li><a href="#tt-sk-cd" style="color: #863CD2;">Instagram</a></li>
+                                <li><a href="#tt-sk-cd" style="color: #FF0000;">Youtube</a></li>
                             </ul>
                         </li>
                         <li class="kien-tim"><a href="#hotro">HỖ TRỢ</a></li>
@@ -38,10 +38,10 @@
 
         <div class="slide-show">
             <div class="list-image">
-                <img src="Assets/Picture/bannerweb1.png" alt="" width="100%">
-                <img src="Assets/Picture/BannerWeb2.png" alt="" width="100%">
-                <img src="Assets/Picture/BannerWeb3.png" alt="" width="100%">
-                <img src="Assets/Picture/bannerweb4.png" alt="" width="100%">
+                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
+                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
+                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
+                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
             </div>
             <div class="btns">
                 <div class="btn btn-left">
@@ -299,7 +299,11 @@
 
         <div id="footer">
                 <div class="mainbg">
-                    <img src="Assets/Picture/chantranlogos.png" alt="" class="social-logo" width="100%">
+                    <img src="Assets/Picture/CHAN TRANG.png" alt="" class="social-logo" width="100%" height="100%">
+                    <div class="input">
+                        <input type="text" placeholder="nguoichoimoi@gmail.com">
+                        <div class="button">Xác nhận</div>
+                    </div>
                 </div>
         </div>
 
@@ -308,6 +312,7 @@
             <img src="Assets/Picture/qrcode.png" alt="" class="qrcode">      
             <a href="./phacakes.apk" download="phacake"><img src="Assets/Picture/getitonCHplay.png" alt="" class="chplay" width="110px"></a>
             <a href="./phacakes.apk" download="phacake"><img src="Assets/Picture/getitonAppStore.png" alt="" class="appstore" width="110px"></a>
+            <a href="#header" class="vedautrang"><img src="Assets/Picture/VEDAUTRANG_BTN.png"  alt=""></a>
         </div>
     </div>
 </body>
