--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phá "Cakes"</title>
+    <title>Tấm Du Ký</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -38,10 +38,10 @@
 
         <div class="slide-show">
             <div class="list-image">
-                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
-                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
-                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
-                <img src="Assets/Picture/BANNER.png" alt="" width="100%">
+                <img src="Assets/Picture/banner1.png" alt="" width="100%">
+                <img src="Assets/Picture/banner2.png" alt="" width="100%">
+                <img src="Assets/Picture/banner3.png" alt="" width="100%">
+                <img src="Assets/Picture/banner4.png" alt="" width="100%">
             </div>
             <div class="btns">
                 <div class="btn btn-left">
@@ -66,7 +66,7 @@
                 <div class="display-flex gioithieu1">
                     <div class="video">
                         <video controls width="670px" poster="Assets/">
-                            <source src="Assets/Picture/huongdanchoi.mp4">
+                            <source src="Assets/Picture/huongdanchoi1.mp4">
                         </video>
                     </div>
                     <div>
@@ -118,7 +118,7 @@
                     </div> -->
                     <div class="main-left">
                         <div class="taivengay-img">
-                            <img src="Assets/Picture/taive.png" usemap="#image-map" width="100%" alt="">
+                            <img src="Assets/Picture/boom.png" usemap="#image-map" width="100%" alt="">
                             <map name="image-map">
                                 <!-- Vùng hình chữ nhật -->
                                 <div class="highlight region-1">
@@ -134,7 +134,7 @@
                     <div class="main-right">
                         <h3>HƯỚNG DẪN</h3>
                         <video controls width="600px">
-                            <source src="Assets/Picture/huongdanchoi.mp4">
+                            <source src="Assets/Picture/huongdanchoi2.mp4">
                         </video>
                     </div>
                     
@@ -298,14 +298,14 @@
         </div>
 
         <div id="footer">
-                <div class="mainbg">
-                    <img src="Assets/Picture/CHAN TRANG.png" alt="" class="social-logo" width="100%" height="100%">
-                    <div class="input">
-                        <input type="text" placeholder="nguoichoimoi@gmail.com">
-                        <div class="button">Xác nhận</div>
-                    </div>
+            <div class="mainbg">
+                <img src="Assets/Picture/CHAN TRANG.png" alt="" class="social-logo" width="100%" height="100%">
+                <div class="input">
+                    <input type="text" placeholder="nguoichoimoi@gmail.com">
+                    <div class="button">Xác nhận</div>
                 </div>
-        </div>
+            </div>
+    </div>
 
         <div class="taive-popup">
             <h5>Quét để <br> chơi thử ngay!</h5>
