--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="header-left">
                 <div class="menu">
                     <ul>
+                        <img src="Assets/Picture/logoheader.png" alt="">
                         <li class="to-kien"><a href="#gioithieu">GIỚI THIỆU</a></li>
                         <li class="tt-sk"><a href="#taivengay">TẢI VỀ</a></li>
                         <li class="kien-hh"><a href="#taivengay">HƯỚNG DẪN</a></li>
