--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="display-flex gioithieu1">
                     <div class="video">
                         <video controls width="670px" poster="Assets/">
-                            <source src="Assets/Picture/videohuongdan2.mp4">
+                            <source src="Assets/Picture/Video_TVC.mp4">
                         </video>
                     </div>
                     <div>
@@ -80,10 +80,10 @@
                 </div>
                 <div class="display-flex phones">
                     <div><img src="/Assets/Picture/dt1.png" alt="" width="220px"></div>
-                    <div><img src="/Assets/Picture/dt1.png" alt="" width="220px"></div>
-                    <div><img src="/Assets/Picture/dt1.png" alt=""width="220px"></div>
-                    <div><img src="/Assets/Picture/dt1.png" alt=""width="220px"></div>
-                    <div><img src="/Assets/Picture/dt1.png" alt=""width="220px"></div>
+                    <div><img src="/Assets/Picture/dt2.png" alt="" width="220px"></div>
+                    <div><img src="/Assets/Picture/dt3.png" alt=""width="220px"></div>
+                    <div><img src="/Assets/Picture/dt4.png" alt=""width="220px"></div>
+                    <div><img src="/Assets/Picture/dt5.png" alt=""width="220px"></div>
                 </div>
             </div>
             
@@ -200,40 +200,40 @@
                             <div class="content-container">
                                 <div class="title display-flex" onclick="momodal1()">
                                     <p>Bảo trì ngày 22.02.2025</p>
-                                    <i>20.02.2002</i>
+                                    <i>20.02.2025</i>
                                 </div>
                                 <div class="description description1">
-                                    <p>Công ty Cổ phần VNG. Z06, Đường 13, phường Tân Thuận Đông, Quận 7, Thành phố Hồ Chí Minh, Việt Nam. Giấy phép cung cấp dịch vụ trò chơi điện tử G1 trên mạng số 251/GP-BTTTT do Bộ Thông tin và Truyền thông cấp ngày 22/06/2015. Quyết định phê duyệt nội dung kịch bản trò chơi điện tử G1 trên mạng số: 1000/QĐ-BTTTT </p>
+                                    <p>Đội ngũ VNG Games thông báo bảo trì tất cả các Game mobile đang được phát hành từ 8 giờ sáng đến 4 giờ chiều ngày 22.02.2025. Trong thời gian bảo trì nếu có bất kì lỗi kĩ thuật nào xin hãy liên hệ tới VNG Games, chúng tôi sẽ khắc phục trong thời gian nhanh nhất!</p>
                                     <button>Xem thêm</button>
                                 </div>
                             </div>
                             <div class="content-container">
                                 <div class="title display-flex" onclick="momodal2()">
-                                    <p>Bảo trì ngày 22.02.2025</p>
-                                    <i>20.02.2002</i>
+                                    <p>Sự kiện "Vòng quay may mắn"</p>
+                                    <i>19.02.2025</i>
                                 </div>
                                 <div class="description description2">
-                                    <p>Công ty Cổ phần VNG. Z06, Đường 13, phường Tân Thuận Đông, Quận 7, Thành phố Hồ Chí Minh, Việt Nam. Giấy phép cung cấp dịch vụ trò chơi điện tử G1 trên mạng số 251/GP-BTTTT do Bộ Thông tin và Truyền thông cấp ngày 22/06/2015. Quyết định phê duyệt nội dung kịch bản trò chơi điện tử G1 trên mạng số: 1000/QĐ-BTTTT </p>
+                                    <p>Sau thời gian bảo trì, vòng quay may mắn sẽ được mở. Đón chờ bạn là rất nhiều phần quà hấp dẫn. Hoàn thành 1 nhiệm vụ để nhận 1 lượt quay.</p>
                                     <button>Xem thêm</button>
                                 </div>
                             </div>
                             <div class="content-container">
                                 <div class="title display-flex" onclick="momodal3()">
-                                    <p>Bảo trì ngày 22.02.2025</p>
-                                    <i>20.02.2002</i>
+                                    <p>Mở khóa màn chơi mới</p>
+                                    <i>15.02.2025</i>
                                 </div>
                                 <div class="description description3">
-                                    <p>Công ty Cổ phần VNG. Z06, Đường 13, phường Tân Thuận Đông, Quận 7, Thành phố Hồ Chí Minh, Việt Nam. Giấy phép cung cấp dịch vụ trò chơi điện tử G1 trên mạng số 251/GP-BTTTT do Bộ Thông tin và Truyền thông cấp ngày 22/06/2015. Quyết định phê duyệt nội dung kịch bản trò chơi điện tử G1 trên mạng số: 1000/QĐ-BTTTT </p>
+                                    <p>Hoàn thành 4 màn chơi để mở khóa cốt truyện tiếp theo. Đón chờ bạn là vô vàn tình tiết và thử thách thú vị ở phía trước! </p>
                                     <button>Xem thêm</button>
                                 </div>
                             </div>
                             <div class="content-container">
                                 <div class="title display-flex" onclick="momodal4()">
-                                    <p>Bảo trì ngày 22.02.2025</p>
-                                    <i>20.02.2002</i>
+                                    <p>Mở khóa tính năng mới</p>
+                                    <i>10.02.2025</i>
                                 </div>
                                 <div class="description description4">
-                                    <p>Công ty Cổ phần VNG. Z06, Đường 13, phường Tân Thuận Đông, Quận 7, Thành phố Hồ Chí Minh, Việt Nam. Giấy phép cung cấp dịch vụ trò chơi điện tử G1 trên mạng số 251/GP-BTTTT do Bộ Thông tin và Truyền thông cấp ngày 22/06/2015. Quyết định phê duyệt nội dung kịch bản trò chơi điện tử G1 trên mạng số: 1000/QĐ-BTTTT </p>
+                                    <p>Không chỉ đơn giản là đặt bom, giờ đây "Tấm du ký" vừa cập nhật thêm tính năng mới. Phá đảo Màn 4 "Quả báo nhãn tiền" để cập nhật tính năng mới cho nhân vật bạn nhé!</p>
                                     <button>Xem thêm</button>
                                 </div>
                             </div>
