--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     </div>
                 </div>
                 <div class="display-flex phones">
-                    <div><img src="/Assets/Picture/dt1.png" alt="" width="220px"></div>
-                    <div><img src="/Assets/Picture/dt2.png" alt="" width="220px"></div>
-                    <div><img src="/Assets/Picture/dt3.png" alt=""width="220px"></div>
-                    <div><img src="/Assets/Picture/dt4.png" alt=""width="220px"></div>
-                    <div><img src="/Assets/Picture/dt5.png" alt=""width="220px"></div>
+                    <div><img src="Assets/Picture/dt1.png" alt="" width="220px"></div>
+                    <div><img src="Assets/Picture/dt2.png" alt="" width="220px"></div>
+                    <div><img src="Assets/Picture/dt3.png" alt=""width="220px"></div>
+                    <div><img src="Assets/Picture/dt4.png" alt=""width="220px"></div>
+                    <div><img src="Assets/Picture/dt5.png" alt=""width="220px"></div>
                 </div>
             </div>
             
