--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                             <map name="image-map">
                                 <!-- Vùng hình chữ nhật -->
                                 <div class="highlight region-1">
-                                    <area shape="rect" coords="285,440,451,387" href="./phacakes.apk" alt="Vùng 1">
+                                    <area shape="rect" coords="285,440,451,387" href="./TamDuKy.apk" alt="Vùng 1">
                                 </div>
                                 <div class="highlight region-1">
-                                    <area shape="rect" coords="285,454,452,507" href="./phacakes.apk" alt="Vùng 2">
+                                    <area shape="rect" coords="285,454,452,507" href="./TamDuKy.apk" alt="Vùng 2">
                                 </div>
                             </map>
                         </div>
@@ -237,8 +237,8 @@
         <div class="taive-popup">
             <h5>Quét để <br> chơi thử ngay!</h5>
             <img src="Assets/Picture/qrcode.png" alt="" class="qrcode">      
-            <a href="./phacakes.apk" download="phacake"><img src="Assets/Picture/getitonCHplay.png" alt="" class="chplay" width="110px"></a>
-            <a href="./phacakes.apk" download="phacake"><img src="Assets/Picture/getitonAppStore.png" alt="" class="appstore" width="110px"></a>
+            <a href="./TamDuKy.apk" download="TamDuKy"><img src="Assets/Picture/getitonCHplay.png" alt="" class="chplay" width="110px"></a>
+            <a href="./TamDuKy.apk" download="TamDuKy"><img src="Assets/Picture/getitonAppStore.png" alt="" class="appstore" width="110px"></a>
             <a href="#header" class="vedautrang"><img src="Assets/Picture/VEDAUTRANG_BTN.png"  alt=""></a>
         </div>
     </div>
